--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,12 +29,17 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  dio: ^4.0.6
+  flutter_polyline_points: ^1.0.0
+  google_maps_flutter: ^2.1.5
+  geolocator: ^8.2.1
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_svg: ^1.0.3
+  google_maps_controller: ^1.2.0
 
 dev_dependencies:
   flutter_test:
