--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,10 @@ dependencies:
   flutter_svg: ^1.0.3
   image_picker: ^0.8.5+1
   google_maps_controller: ^1.2.0
+  firebase_auth: ^3.3.18
+  cloud_firestore: ^3.1.15
+  firebase_core: ^1.17.0
+  get: 4.3.8
 
 
 dev_dependencies:
