--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,7 +44,7 @@ dependencies:
   firebase_auth: ^3.3.18
   cloud_firestore: ^3.1.15
   firebase_core: ^1.17.0
-  get: 4.3.8
+  get: ^4.3.8
 
 
 dev_dependencies:
