--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   provider: ^5.0.0
   fluttertoast: ^8.0.9
   firebase_database: ^9.0.14
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
