--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,8 @@ dependencies:
   fluttertoast: ^8.0.9
   firebase_database: ^9.0.14
   intl: ^0.17.0
+  firebase_storage: ^10.2.17
+  path: ^1.8.0
 
 dev_dependencies:
   flutter_test:
