--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   intl: ^0.17.0
   firebase_storage: ^10.2.17
   path: ^1.8.0
+  auto_reload: ^1.1.0
 
 dev_dependencies:
   flutter_test:
