--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   firebase_storage: ^10.2.17
   path: ^1.8.0
   auto_reload: ^1.1.0
+  flutter_firebase_chat_core: ^1.5.4
 
 dev_dependencies:
   flutter_test:
