--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   flutter_firebase_chat_core: ^1.5.4
   firebase_messaging: ^11.4.2
   flutter_local_notifications: ^9.6.1
+  month_picker_dialog: ^0.4.0
 
 dev_dependencies:
   flutter_test:
