--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,7 +66,9 @@ dependencies:
   flutter_local_notifications: ^9.6.1
   month_picker_dialog: ^0.4.0
 
-
+dependency_overrides:
+  image_picker_android: 0.8.4+13
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
